# Hercules

./: .gitignore  Cargo.toml  DESIGN.md  IR.md  README.md
frontend/: Cargo.toml  build.rs  spec.tex
frontend/examples/: cava.hyd  matadd.hyd  matmul.hyd  test.hyd  vecadd.hyd
frontend/parsing/: bison.y  hercules.l  hercules.y
frontend/src/: cleanup.rs  codegen.rs  env.rs  lang.l  lang.y  main.rs  parser.rs  semant.rs  ssa.rs  types.rs
frontend/src/errors/: mod.rs
frontend/src/lexer/: mod.rs  tokens.rs
frontend/src/parser/: ast.rs  mod.rs  stringtab.rs
hercules_cg/: Cargo.toml
hercules_cg/src/: antideps.rs  array_alloc.rs  common.rs  cpu.rs  cpu_beta.rs  gcm.rs  lib.rs  top.rs
hercules_codegen/: Cargo.toml
hercules_codegen/src/: antideps.rs  array_alloc.rs  cpu_alpha.rs  cpu_beta.rs  gcm.rs  lib.rs
hercules_ir/: Cargo.toml
hercules_ir/src/: antideps.rs  build.rs  ccp.rs  dataflow.rs  dce.rs  def_use.rs  dom.rs  dot.rs  gcm.rs  gvn.rs  ir.rs  iter.rs  lib.rs  loops.rs  parse.rs  schedule.rs  subgraph.rs  typecheck.rs  verify.rs
hercules_opt/: Cargo.toml
hercules_opt/src/: ccp.rs  copy.rs  dce.rs  forkify.rs  gvn.rs  lib.rs  pass.rs  phi_elim.rs  pred.rs
hercules_rt/: Cargo.toml  build.rs
hercules_rt/src/: elf.rs  exec.rs  lib.rs  load.c
hercules_samples/: ccp_example.hir  strset.hir  sum_sample.hir  task_parallel.hir
hercules_samples/invalid/: bad_phi.hir  bad_phi2.hir
hercules_samples/matmul/: Cargo.toml  matmul.hir
hercules_tools/: Cargo.toml
hercules_tools/hercules_cpu/: Cargo.toml
hercules_tools/hercules_cpu/src/: main.rs
hercules_tools/hercules_cpu_beta/: Cargo.toml
hercules_tools/hercules_cpu_beta/src/: main.rs
hercules_tools/hercules_dot/: Cargo.toml
hercules_tools/hercules_dot/src/: dot.rs  main.rs
hercules_tools/hercules_driver/: Cargo.toml
hercules_tools/hercules_driver/src/: main.rs
hercules_tools/src/hercules_cpu/: main.rs
hercules_tools/src/hercules_dot/: dot.rs  main.rs
juno_frontend/: Cargo.toml  README.md
juno_frontend/examples/: cava.jn  matadd.jn  matmul.jn  test.jn  (+1 more)
samples/: ccp_example.hir  fork_join.hir  gvn_example.hir  iter_example.hir  matmul.hir  simple1.dot  simple1.hir  strset.hir
(+8 files in other folders)
