[package]
name = "hercules_tools"
version = "0.1.0"
authors = ["Russel Arbore <rarbore2@illinois.edu>"]

[[bin]]
name = "hercules_dot"
path = "src/hercules_dot/main.rs"

[[bin]]
name = "hercules_cpu"
path = "src/hercules_cpu/main.rs"

[dependencies]
clap = { version = "*", features = ["derive"] }
hercules_ir = { path = "../hercules_ir" }
hercules_opt = { path = "../hercules_opt" }
hercules_codegen = { path = "../hercules_codegen" }
rand = "*"
