[package]
name = "hercules_cpu"
version = "0.1.0"
authors = ["Russel Arbore <rarbore2@illinois.edu>"]

[dependencies]
clap = { version = "*", features = ["derive"] }
hercules_ir = { path = "../../hercules_ir" }
hercules_opt = { path = "../../hercules_opt" }
hercules_codegen = { path = "../../hercules_codegen" }
rand = "*"
